...
    <attr format="integer" name="video_width"/>
    <declare-styleable name="AdtechBannerView"><attr name="app_name"/><attr name="schema"/><attr name="domain"/><attr name="port"/><attr name="close_button_drawable"/><attr name="group_id"/><attr name="image_banner_resize_enabled"/><attr name="hide_after_refresh_interval"/><attr name="alias"/><attr name="network_id"/><attr name="subnetwork_id"/><attr name="mpid"/></declare-styleable>
    <declare-styleable name="AdtechInterstitialView"><attr name="app_name"/><attr name="schema"/><attr name="domain"/><attr name="port"/><attr name="close_button_drawable"/><attr name="group_id"/><attr name="alias"/><attr name="network_id"/><attr name="subnetwork_id"/><attr name="mpid"/></declare-styleable>
    <declare-styleable name="AdtechVideoView"><attr name="app_name"/><attr name="schema"/><attr name="domain"/><attr name="port"/><attr name="close_button_drawable"/><attr name="alias"/><attr name="network_id"/><attr name="subnetwork_id"/><attr name="linear_ads"/><attr name="video_width"/><attr name="video_height"/><attr name="video_length"/><attr name="video_bitrate"/><attr name="video_encoding"/
    <!-- From: file:/Users/radu/Development/Projects/AdTechSDK-Android/ADTECHMobileSDK/adtech-mobile-sdk/src/main/res/values/strings.xml -->
    <eat-comment/>
    <string name="adtech_confirm">OK</string>
    <string name="adtech_create_calendar_event">Do you want to allow the ad to create an event in your calendar?</string>
    <string name="adtech_debug_mode_description_title">Landing page debugging</string>
    <string name="adtech_dont_allow">Don\'t Allow</string>
    <string name="adtech_label_format">$mm:$ss of ad $current/$total</string>
    <string name="adtech_location_permission_prompt">Do you want to allow the ad to use your current location?</string>
    <string name="adtech_no_network">Please check your Internet connectivity.</string>
...
